--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
        "        2250.]), <a list of 10 Text xticklabel objects>)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -154,13 +154,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -235,7 +230,7 @@
        "max         6.700000"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +251,7 @@
        "[(9)]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +280,7 @@
        " ('USC00518838', 511)]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +303,7 @@
        "[(54.0, 85.0, 71.66378066378067)]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +372,7 @@
        "((61.0), 69.64646464646465, (78.0))"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,20 +416,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Using pandas .loc\n",
     "def describe_monthly_temp_pd(m):\n",
     "    temps=pd.DataFrame(session.query(Measurement.date, Measurement.tobs))\n",
-    "    filtered = temps.loc[pd.to_datetime(x['date']).dt.month == m]\n",
+    "    filtered = temps.loc[pd.to_datetime(temps['date']).dt.month == m]\n",
     "    return filtered.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +505,7 @@
        "max      85.000000"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +592,7 @@
        "max      83.000000"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,6 +600,13 @@
    "source": [
     "describe_monthly_temp_pd(12)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
